feat: Add cross-platform build support
- Add PyInstaller as build dependency
- Create build.spec for PyInstaller
- Modify DB path to be relative to executable
- Add GitHub Actions workflow for Windows, Linux, and Mac builds

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,6 +38,9 @@ dev = [
     "pytest",
     "ruff",
 ]
+build = [
+    "pyinstaller>=6.0",
+]
 
 [project.scripts]
 dividend-cli = "dividend_calculator.cli:main"
