--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,6 +22,7 @@ jobs:
             executable_name: dividend-cli
 
     runs-on: ${{ matrix.os }}
+    timeout-minutes: 30
 
     steps:
       - name: Checkout code
@@ -35,7 +36,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install pyinstaller pandas click tabulate tqdm requests
+          pip install pyinstaller "pandas<3.0" click tabulate tqdm requests
 
       - name: Build with PyInstaller
         run: |
@@ -44,7 +45,6 @@ jobs:
             --distpath ./dist/${{ matrix.artifact_name }} \
             --workpath ./build \
             run.py
-        shell: bash
 
       - name: Create zip archive
         working-directory: ./dist
