--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,21 +34,16 @@ jobs:
           python-version: '3.11'
 
       - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install pyinstaller "pandas<3.0" click tabulate tqdm requests
+        run: python -m pip install --upgrade pip && pip install pyinstaller "pandas<3.0" click tabulate tqdm requests
 
       - name: Build with PyInstaller
         run: |
-          pyinstaller --onefile --console \
-            --name ${{ matrix.executable_name }} \
-            --distpath ./dist/${{ matrix.artifact_name }} \
-            --workpath ./build \
-            run.py
+          mkdir -p dist/${{ matrix.artifact_name }}
+          pyinstaller --onefile --console --name ${{ matrix.executable_name }} --distpath dist/${{ matrix.artifact_name }} --workpath build run.py
 
       - name: Create zip archive
-        working-directory: ./dist
         run: |
+          cd dist
           if [ "${{ matrix.os }}" = "windows-latest" ]; then
             powershell -Command "Compress-Archive -Path '${{ matrix.artifact_name }}/*' -DestinationPath '${{ matrix.artifact_name }}.zip'"
           else
